<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/scroll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <!-- Information -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="4"
                    android:text="@string/chi_tiet_phieu"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="3dp"
                    android:background="@color/blue" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="2dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Phiếu xuất/Vệ tinh" />

                    <TextView
                        android:id="@+id/chitietphieu_maphieu_vetinh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="potter.nguyen@gmail.com" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="3dp"
                    android:background="@color/green" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="2dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mã dịch vụ :" />

                    <TextView
                        android:id="@+id/chitietphieu_madichvu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="0914268901" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="3dp"
                    android:background="@color/green" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="2dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ngày xuất/Liên hệ :" />

                    <TextView
                        android:id="@+id/chitietphieu_lienhe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="Phòng phát triển phần mềm 2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="3dp"
                    android:background="@color/green" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="2dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nội dung xuất :" />

                    <TextView
                        android:id="@+id/chitietphieu_noidungxuat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="013467499" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="3dp"
                    android:background="@color/green" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="2dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hỏng lại/ lần báo/ lần nhắc :" />

                    <TextView
                        android:id="@+id/chitietphieu_lannhac"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="2dp"
                    android:visibility="gone" >

                    <CheckBox
                        android:id="@+id/check_co_toado"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="Cho phép cập nhật lại vị trí và ảnh" />
                </LinearLayout>

                

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="2dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="2dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chu_thich"
                            android:textColor="@color/blue"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chu_thich_hong_lai"
                            android:textColor="@color/blue"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chu_thich_thong_so_DSLAM"
                            android:textColor="@color/blue"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chu_thich_DSLAM_1"
                            android:textColor="@color/blue"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chu_thich_DSLAM_2"
                            android:textColor="@color/blue"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chu_thich_DSLAM_3"
                            android:textColor="@color/blue"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chu_thich_DSLAM_4"
                            android:textColor="@color/blue"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chu_thich_DSLAM_5"
                            android:textColor="@color/blue"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thongso"
                            android:textColor="@color/blue"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thongso_1"
                            android:textColor="@color/blue"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thongso_2"
                            android:textColor="@color/blue"
                            android:textStyle="normal" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <CheckBox 
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="Cập nhật toạ độ của thuê bao"
                android:id="@+id/cbxLocation"/>
             <fragment
                    android:id="@+id/mapo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    class="view.YourMapFragment" />
        </LinearLayout>
        
        
    </ScrollView>

</RelativeLayout>